--- a/src/ui/kbs_ui_success.fxml
+++ b/src/ui/kbs_ui_success.fxml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<VBox prefHeight="277.0" prefWidth="519.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="277.0" prefWidth="519.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.SuccessController">
   <children>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
          <children>
-            <Text layoutX="151.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sie haben die Plätze erfolgreich gebucht!" />
-            <Button layoutX="224.0" layoutY="166.0" mnemonicParsing="false" text="Schliessen" />
+            <Text layoutX="136.0" layoutY="74.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sie haben folgende Plätze erfolgreich gebucht!" />
+            <Button fx:id="closeBtn" layoutX="224.0" layoutY="207.0" mnemonicParsing="false" onAction="#Close" text="Schliessen" />
+            <ListView fx:id="listView" layoutX="182.0" layoutY="94.0" prefHeight="89.0" prefWidth="155.0" />
          </children>
     </AnchorPane>
   </children>
