--- a/src/main/resources/fxml/kbs_ui_movie.fxml
+++ b/src/main/resources/fxml/kbs_ui_movie.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -25,30 +26,42 @@
                <children>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <ImageView fitHeight="100.0" fitWidth="120.0" onMouseClicked="#handleImageViewAction" pickOnBounds="true" preserveRatio="true" />
-                        <Text layoutX="128.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Text" />
-                        <Text layoutX="129.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                        <ImageView fitHeight="100.0" fitWidth="120.0" layoutY="-5.0" onMouseClicked="#handleImageViewAction" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Images/Captain%2520Marvel.jpg" />
+                           </image></ImageView>
+                        <Text layoutX="128.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Captain Marvel" />
+                        <Text layoutX="129.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Safe the Earth" />
                      </children>
                   </AnchorPane>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                      <children>
-                        <ImageView fitHeight="100.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" />
-                        <Text layoutX="128.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Text" />
-                        <Text layoutX="129.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                        <ImageView fitHeight="100.0" fitWidth="120.0" onMouseClicked="#handleImageViewAction" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Images/Dumbo.jpg" />
+                           </image></ImageView>
+                        <Text layoutX="128.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Dumbo" />
+                        <Text layoutX="129.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fliegender Elefant" />
                      </children>
                   </AnchorPane>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                      <children>
-                        <ImageView fitHeight="100.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" />
-                        <Text layoutX="128.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Text" />
-                        <Text layoutX="129.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                        <ImageView fitHeight="100.0" fitWidth="120.0" onMouseClicked="#handleImageViewAction" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Images/endgame.jpg" />
+                           </image></ImageView>
+                        <Text layoutX="128.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Endgame" />
+                        <Text layoutX="129.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Destroy" />
                      </children>
                   </AnchorPane>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <children>
-                        <ImageView fitHeight="100.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true" />
-                        <Text layoutX="128.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Text" />
-                        <Text layoutX="129.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" />
+                        <ImageView fitHeight="100.0" fitWidth="120.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../Images/Matrix.jpg" />
+                           </image></ImageView>
+                        <Text layoutX="128.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Matrix" />
+                        <Text layoutX="129.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Computer" />
                      </children>
                   </AnchorPane>
                </children>
